--- a/Starbucks_Models.ipynb
+++ b/Starbucks_Models.ipynb
@@ -1728,9 +1728,9 @@
       "source": [
         "### **Conclusion**\n",
         "\n",
-        "It is not an easy task to create a decent modeling on marketing campaign due to many factors such as unpredicable human behaviours and economic cycles etc. \n",
+        "It is not an easy task to create a decent modeling on marketing campaign due to many factors such as unpredictable human behaviours and economic cycles etc. \n",
         "\n",
-        "In this project, I tried to accomplish a more convining model by combining the  business heuristics knowledge and the machine learning approach. Hope that would give some insights on the future marketing campaign.\n",
+        "In this project, I tried to accomplish a more convincing model by combining the  business heuristics knowledge and the machine learning approach. Hope that would give some insights on the future marketing campaign.\n",
         "\n",
         "Notes of this project:\n",
         "\n",
